Add some "--opens", too